--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,3 +35,23 @@
         }
     }
 }
+
+body::-webkit-scrollbar{
+    width: 0.9em;
+    background-color: rgb(235, 152, 152);
+}
+
+body::-webkit-scrollbar-track{
+    margin-block: 0.3rem;
+    border-radius: 100vw;
+    background-color: rgb(235, 152, 152);
+}
+body::-webkit-scrollbar-thumb{
+    background-color: rgb(233, 44, 44);
+    border-radius: 100vw;
+}
+
+body::-webkit-scrollbar-thumb:hover{
+    background-color: rgb(134, 16, 16);
+    
+}
