Admin page loading with login functionality

--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -1,5 +1,5 @@
-$main-color: #ff0000;
-$header_bg: #6d5b5b;
+$main-color: #FA1B00;
+$header_bg: #524646;
 $container_max_width: 1160px;
 $border_def: 1px solid black;
-$link-decor: white;
+$secondary-color: #00FA77;
