--- a/assets/css/admin/page_styles/_header.scss
+++ b/assets/css/admin/page_styles/_header.scss
@@ -6,13 +6,15 @@
 body {
 	box-sizing: content-box;
 	font-family: sans-serif;
-	background-color: rgb(255, 242, 242);
+	background-color: #AFB8BA;
+	display:flex;
 }
 
 aside {
-	@include heightAndWidth(100vh, 25%, white);
-
-	border-right: 2px solid black;
+	@include heightAndWidth(100vh, 20%, rgb(243, 239, 239));
+	position: sticky;
+	top: 0px;
+	box-shadow: 0px 2px 10px black;
 	text-align: center;
 	.container {
 		width: 100%;
