--- a/assets/css/admin/styles.css
+++ b/assets/css/admin/styles.css
@@ -7,14 +7,21 @@ body {
   -webkit-box-sizing: content-box;
           box-sizing: content-box;
   font-family: sans-serif;
-  background-color: #fff2f2;
+  background-color: #AFB8BA;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 aside {
-  width: 25%;
+  width: 20%;
   height: 100vh;
-  background-color: white;
-  border-right: 2px solid black;
+  background-color: #f3efef;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0px;
+  -webkit-box-shadow: 0px 2px 10px black;
+          box-shadow: 0px 2px 10px black;
   text-align: center;
 }
 
