--- a/assets/css/page_styles/_header.scss
+++ b/assets/css/page_styles/_header.scss
@@ -26,7 +26,7 @@ header {
 		padding: 25px 0px;
 		.left {
 			h1 {
-				color: #ffdede;
+				color: $secondary-color;
 				font-size: 2rem;
                 cursor: pointer;
 			}
@@ -40,14 +40,14 @@ header {
 					list-style: none;
 					a {
 						text-decoration: none;
-						color: red;
+						color: $main-color;
 						font-size: 1.8rem;
 						text-decoration-color: white;
 						font-weight: bolder;
 						&:hover {
 							transition: linear 1s;
 							text-decoration: underline;
-							text-decoration-color: $link-decor;
+							text-decoration-color: $secondary-color;
 						}
 					}
 				}
