--- a/assets/css/admin/page_styles/_header.scss
+++ b/assets/css/admin/page_styles/_header.scss
@@ -6,53 +6,55 @@
 body {
 	box-sizing: content-box;
 	font-family: sans-serif;
-	background-color: #AFB8BA;
-	display:flex;
+	background-color: #AFB8BA;	
 }
 
 aside {
 	@include heightAndWidth(100vh, 20%, rgb(243, 239, 239));
-	position: sticky;
-	top: 0px;
+
 	box-shadow: 0px 2px 10px black;
 	text-align: center;
-	.container {
-		width: 100%;
-		height: 70%;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-around;
-		#sidebar-header {
-			padding-top: 5%;
-			color: red;
-		}
-		nav {
-			ul {
-				list-style: none;
-				display: flex;
-				flex-direction: column;
-				gap: 20px;
-			}
-			li {
-				a {
-					color: black;
-					font-size: 16px;
-				}
-			}
-		}
-		.sidebar-bottom {
+	display: inline-block;
+	header{
+		
+		.container {
+			width: 100%;
+			height: 70%;
 			display: flex;
 			flex-direction: column;
-			gap: 50px;
-			.user-who {
-				border-top: 1px solid black;
-				margin-top: 5%;
-				font-weight: bolder;
-			}
-			.log-out {
+			justify-content: space-around;
+			#sidebar-header {
+				padding-top: 5%;
 				color: red;
-				text-decoration-color: black;
-				font-size: 1.3rem;
+			}
+			nav {
+				ul {
+					list-style: none;
+					display: flex;
+					flex-direction: column;
+					gap: 20px;
+				}
+				li {
+					a {
+						color: black;
+						font-size: 16px;
+					}
+				}
+			}
+			.sidebar-bottom {
+				display: flex;
+				flex-direction: column;
+				gap: 50px;
+				.user-who {
+					border-top: 1px solid black;
+					margin-top: 5%;
+					font-weight: bolder;
+				}
+				.log-out {
+					color: red;
+					text-decoration-color: black;
+					font-size: 1.3rem;
+				}
 			}
 		}
 	}
