--- a/assets/css/page_styles/contact/_contact.scss
+++ b/assets/css/page_styles/contact/_contact.scss
@@ -31,7 +31,7 @@ form{
         background-color: $main-color;
         color: white;
         text-decoration: underline;
-        text-decoration-color: $secondary-color;
+        text-decoration-color: white;
         border-radius: 10px;
         font-size: 20px;
         padding: 10px 30px;
